# AppVirtualenvCpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
res/: default_app.json  default_env.json  example_apps.json
src/: app.cpp  app.h  app_gui.cpp  app_gui.h  app_process.cpp  app_process.h  app_schema.cpp  app_schema.h  env_test.cpp  environ.cpp  environ.h  file_loading.cpp  file_loading.h  main.cpp  managed_config.cpp  managed_config.h  print_environment.c  print_environment.cpp  scrolling_buffer.cpp  scrolling_buffer.h  utils.cpp  utils.h
